PortalPackage/ Enrollment Rx Core/objects/School__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>Dean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx custom field</description>
        <label>Dean</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schools</relationshipLabel>
        <relationshipName>Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <label>School Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_City__c</fullName>
        <description>ERx Custom Field</description>
        <label>School City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Description__c</fullName>
        <description>ERx Custom Field</description>
        <label>School Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_State_Province__c</fullName>
        <description>ERx Custom Field</description>
        <label>School State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Zip__c</fullName>
        <description>ERx Custom Field</description>
        <label>School Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>